--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "dev":"nodemon scr/index.js",
+    "dev": "nodemon scr/index.js",
     "start": "node src/index.js"
   },
   "author": "",
@@ -20,6 +20,7 @@
     "nodemon": "^3.1.11"
   },
   "dependencies": {
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "resend": "^6.6.0"
   }
 }
